<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/md_theme_surfaceContainerHigh">

    <TextView
        android:id="@+id/AppearanceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appearance"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="@color/md_theme_onSurface"
        android:paddingBottom="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_theme_outlineVariant" />

    <LinearLayout
        android:id="@+id/OptionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/edit"
             />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:text="@string/view"
            android:textAppearance="?attr/textAppearanceBodyMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/OptionTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
         />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:text="@string/theme"
            android:textAppearance="?attr/textAppearanceBodyMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/OptionDateFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/notifications"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:text="@string/date_format"
            android:textAppearance="?attr/textAppearanceBodyMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/OptionTextSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/text_format" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:text="@string/text_size"
            android:textAppearance="?attr/textAppearanceBodyMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/OptionNotesSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:text="@string/notes_sorted_by"
            android:textAppearance="?attr/textAppearanceBodyMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/OptionListSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/checkbox" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:text="@string/list_item_auto_sort"
            android:textAppearance="?attr/textAppearanceBodyMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/OptionStartView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/home" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:text="@string/start_view"
            android:textAppearance="?attr/textAppearanceBodyMedium" />
    </LinearLayout>

</LinearLayout>